kubernetes/k3s-prod-a/syncthing/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
  namespace: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: docker.io/linuxserver/syncthing:1.28.0@sha256:13e46e5e51f2a04a8bd0ca7c34464aca2d77cbf561f004b7802ca3eebf5dccf5
          ports:
            - name: web
              containerPort: 8384
            - name: bep-tcp
              containerPort: 22000
              protocol: TCP
            - name: bep-udp
              containerPort: 22000
              protocol: UDP
            - name: svc-disc
              containerPort: 21027
              protocol: UDP
          volumeMounts:
            - name: syncthing-config
              mountPath: /config
            - name: syncthing-repos
              mountPath: /repos
      volumes:
        - name: syncthing-config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: syncthing-repos
          persistentVolumeClaim:
            claimName: syncthing-repos
