kubernetes/k3s-prod-a/syncthing/ingress-route-bep-tcp.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: syncthing
  namespace: syncthing
spec:
  entryPoints:
    - st-bep-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: syncthing
          port: 22000
