kubernetes/k3s-prod-a/syncthing/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  namespace: syncthing
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.l.47fc5c.com`)
      kind: Rule
      services:
        - name: syncthing
          kind: Service
          port: 8384
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
